attendance: add crud for checkin and checkout
